<resources>
    <string name="app_name">Perú S.A.C</string>
    <!-- login -->
    <string name="title_login">Bienvenido</string>
    <string name="box_email">correo Electronico</string>
    <string name="box_pass">contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="text_pass">recuperar contraseña -></string>
    <string name="text_register">¿No Tienes una cuenta?</string>
    <string name="name_register">Registrate</string>

    <!-- recuperar -->
    <string name="box_recuperar">correo Electronico, usuario</string>
    <string name="btn_repass">Enviar enlace de inicio de sesión</string>
    <string name="text_create">Crear Cuenta Nueva</string>
    <string name="txt_return">Volver al inicio de sesion</string>

    <!-- registro -->
    <string name="txt_name">nombre</string>
    <string name="txt_apellido">apellidos</string>
    <string name="txt_nac">fecha nacimiento</string>
    <string name="txt_user">usuario</string>
    <string name="return_create">Regístrese</string>
    <string name="btn_register">Registrarse</string>
    <string name="description_register">Es posible que las personas que usan nuestro servicio hayan subido tu información de correo a nuestra web. Al registrarte, aceptas nuestras Condiciones, la Política de privacidad y la Política de cookies.</string>

    <!-- cargando -->
    <string name="txt_pause">Espera un Momento</string>
    <string name="txt_loading">Cargando ...</string>

    <!-- bienvenida -->
    <string name="welcome">Bienvenida Barbie Choclo</string>

    <!-- contenido -->
    <string name="categories">Categoria</string>
    <string name="popular">Popular</string>

    <!-- modal -->
    <string name="txt_modal">El Enlace fue enviado Correctamente :)</string>
    <string name="txt_alert">Mensaje</string>

</resources>