<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title_login"
        android:textSize="35dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textSize="29dp"/>

    <EditText
        android:id="@+id/correo"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/fondo_border"
        android:hint="@string/box_email"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:textSize="29dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="100dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/fondo_border">

        <EditText
            android:id="@+id/contraseña"
            android:layout_toStartOf="@+id/contraseñaicono"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/box_pass"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="29dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:background="@color/transparent"/>

        <ImageView
            android:id="@+id/contraseñaicono"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@raw/eye_show"
            android:adjustViewBounds="true"
            android:layout_marginEnd="20dp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/btniniciarsesion"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:background="@drawable/btn_efecto"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:text="@string/btn_login"
        android:textSize="32dp"
        android:textColor="@color/border_box"
        android:textAllCaps="false"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@raw/o"/>

    <TextView
        android:id="@+id/recuperarcontraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="60dp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/text_pass"
        android:textSize="20dp"/>

    <View
        android:layout_width="500dp"
        android:background="@color/black"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="17dp"
            android:textColor="@color/black"
            android:text="@string/text_register"/>

        <TextView
            android:id="@+id/crearcuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            android:textSize="17dp"
            android:textColor="@color/border_box"
            android:text="@string/name_register"/>
    </LinearLayout>

</LinearLayout>