<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".recuperar">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="139dp"
            android:layout_marginBottom="10dp"
            android:src="@raw/candado"
            app:layout_constraintBottom_toTopOf="@+id/cuadro1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/cuadro1"
            android:layout_width="0dp"
            android:layout_height="470dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo">

            <EditText
                android:id="@+id/recuperarcorreo"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/fondo_border"
                android:hint="@string/box_recuperar"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/btnrecuperar"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/btn_efecto"
                android:gravity="center"
                android:text="@string/btn_repass"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/border_box"
                android:textSize="20dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:src="@raw/o" />

            <TextView
                android:id="@+id/crearcuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="70dp"
                android:text="@string/text_pass"
                android:textAlignment="center"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cuadro1">

            <TextView
                android:id="@+id/regresar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rinicio"
                android:gravity="center"
                android:text="@string/txt_return"
                android:textAlignment="center"
                android:textSize="20dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>